crates/parser/tests/cases/snapshots/cases__errors__self_const.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(self_const), module::parse_module,\n    \"const self: u8 = 10\")"

---
error: failed to parse constant declaration
  ┌─ self_const:1:7
  │
1 │ const self: u8 = 10
  │       ^^^^ expected a name, found keyword `self`


